feat: add Threads article module; support ASTRA_DB_TOKEN; app routes for threads; TikTok URL normalization and retries; README simplified; deploy script envs

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ langchain-openai>=0.1.0
 # 工具包
 python-dotenv>=1.0.0
 nest_asyncio>=1.5.6
+parsel>=1.9.0
+jmespath>=1.0.1
+nested-lookup>=0.2.25
+playwright>=1.47.0
